recursion.cons.lessons.recursion.cons.Min.scala.error
min:-6: error: Missing closing brace `}' assumed here
try {
^min:1: error: expected class or object definition
def min(l:List[Int]): Int = {
^